--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "Teragaming",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.11.1"
+  },
   "private": true,
   "scripts": {
     "start": "node server.js",
