--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Teragaming",
   "version": "0.0.0",
   "engines": {
-    "node": "12.11.1"
+    "node": "16.x"
   },
   "private": true,
   "scripts": {
